objects/vlocity_ins__InterfaceImplementationDetail__c.object
<CustomObject>
    <description>Represents the available implementations for a defined interface. Implementations define the programmatic logic that will run when the interface is called by the application. Available implementations are sometimes stubs which do not perform any logic but usually provide at least baseline logic. Only one implementation can be defined as the default implementation for an interface. Other implementations, if present, are not active.</description>
    <fields>
        <fullName>vlocity_ins__InterfaceId__c</fullName>
        <label>Interface Name</label>
        <referenceTo>vlocity_ins__InterfaceImplementation__c</referenceTo>
        <relationshipLabel>Interface Implementation Detail</relationshipLabel>
        <relationshipName>InterfaceImplementation_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InterfaceName__c</fullName>
        <formula>vlocity_ins__InterfaceId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interface Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <label>Interface Implementation Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Available Implementation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interface Implementation Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>